# anti-copyright

./: .gitignore  CMakeLists.txt  main.cpp  russian_stopwords.txt  test.txt  test2.txt  testText.txt  testText2.txt
